2003-08-26  Darin Adler  <darin@apple.com>

        Reviewed by Maciej.

        - follow-on to fix for 3310943 -- REGRESSION (Panther): textareas in forms sometimes draw blank (bugreporter)

        * kwq/KWQListBox.mm: (QListBox::QListBox): Remove call to releaseGState. This was here to
        work around a problem we thought was an AppKit bug, but it turns out it was caused by
        NSView hackery in WebKit. We now do the WebKit part in a way that does not create the problem.

2003-08-26  Darin Adler  <darin@apple.com>

        Reviewed by Maciej.

        - fixed 3031562 -- most forms don't work in certain configurations because of a bug in KWQVariant

        * kwq/KWQVariant.mm: (QVariant::QVariant): Set the b element of the union, not the d element,
        in the constructor for bool.

2003-08-26  David Hyatt  <hyatt@apple.com>

	Fix for 3395950, better support for self-collapsing blocks.  Make them obey
	clear properly and also change the definition of self-collapsing to match
	the CSS2.1 specification.
	
        Reviewed by gramps

        * khtml/rendering/render_block.cpp:
        * khtml/rendering/render_block.h:

2003-08-26  David Hyatt  <hyatt@apple.com>

	Fix for 3335175, www.calstone.com renders as blank.  The fix is to deliberately
	introduce an error into our HTML parsing code that causes us to honor self-closing
	XML-style <script/> tags.  This matches Mozilla and Opera behavior (both of them
	have this bug), but it does not match WinIE.
	
        Reviewed by mjs

        * khtml/html/htmltokenizer.cpp:

2003-08-26  David Hyatt  <hyatt@apple.com>

	Fix for 3286229, popup menu misplaced.  <form> needs to be allowed as a child of
	<h1>-<h6> tags.  All other browsers allow this.
	
        Reviewed by darin

        * khtml/html/dtd.cpp:

2003-08-26  Darin Adler  <darin@apple.com>

        Reviewed by Maciej.

        - re-fixed 3366542 -- filename with non-ASCII name left out of Content-Disposition for <input type=file>
